Small improvements in integration tests